--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -62,7 +62,7 @@
 }
 .navigation__hamburger-icons {
   margin: 0 0.5em;
-  z-index: 1600;
+  z-index: 2100;
   @include a.lg-tablets {
     display: none;
   }
