--- a/src/styles/components/_overlay.scss
+++ b/src/styles/components/_overlay.scss
@@ -18,5 +18,5 @@
   top: 0;
   bottom: 0;
   right: 0;
-  z-index: 1400;
+  z-index: 1600;
 }
