--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -4,7 +4,7 @@
   width: 70vw;
   min-height: 200vh;
   position: absolute;
-  z-index: 1500;
+  z-index: 2000;
   padding: 5rem 0 0 1rem;
   top: 0;
   bottom: 0;
