--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -7,7 +7,7 @@
   top: 40%;
   position: absolute;
   cursor: pointer;
-  z-index: 1500;
+  z-index: 2000;
   border-radius: 50%;
   padding: 1em;
   background: white;
@@ -32,10 +32,10 @@
   top: 45%;
   position: absolute;
   cursor: pointer;
-  z-index: 1500;
+  z-index: 1300;
   border-radius: 50%;
   padding: 0.7em;
-  background: white;
+  background: a.$white;
   @include a.lg-tablets {
     display: none;
   }
